# Meridian-Stellar-Hackathon

./: .gitignore  README.md
rwa/: ARCHITECTURE.md  Cargo.toml  README.md
rwa/.soroban/identity/: alice.toml  deployer.toml
rwa/compliance/contracts/hello-world/src/: lib.rs
rwa/contracts/claim_topics_registry/contracts/hello_world/src/: test.rs
rwa/contracts/claim_topics_registry/contracts/hello_world/test_snapshots/test/: test_claim_topics_registry.1.json
rwa/contracts2/claim_topics_registry/: Cargo.toml
rwa/contracts2/claim_topics_registry/src/: test.rs
rwa/contracts2/compliance_core/: Cargo.toml
rwa/contracts2/compliance_core/src/: lib.rs
rwa/contracts2/compliance_modules/: Cargo.toml
rwa/contracts2/compliance_modules/src/: jurisdiction_module.rs  lockup_module.rs  max_holders_module.rs  pause_freeze_module.rs
rwa/contracts2/identity_registry/: Cargo.toml
rwa/contracts2/identity_registry/src/: identity_registry.rs  lib.rs
rwa/contracts2/integrations/: Cargo.toml
rwa/contracts2/integrations/src/: blend_adapter.rs  soroswap_adapter.rs
rwa/contracts2/srwa_token/: Cargo.toml
rwa/contracts2/srwa_token/src/: lib.rs
rwa/contracts2/token_factory/: Cargo.toml
rwa/contracts2/token_factory/src/: lib.rs
rwa/contracts2/trusted_issuers_registry/: Cargo.toml
rwa/contracts2/trusted_issuers_registry/src/: test.rs
rwa/contracts3/claim_topics_registry/contracts/hello_world/src/: test.rs
rwa/scripts/: deploy.sh  setup-issuer.sh
srwa/blender-adapter/contracts/hello-world/: Cargo.toml
srwa/blender-adapter/contracts/hello-world/src/: lib.rs
(+211 files in other folders)
