[package]
name = "blend-adapter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Use a versão compatível com blend-contract-sdk
soroban-sdk = "20.5.0"

[dev-dependencies]
soroban-sdk = { version = "20.5.0", features = ["testutils"] }

[features]
default = []
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true